--- a/MyEventURL/Web.config
+++ b/MyEventURL/Web.config
@@ -9,11 +9,11 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="ida:ClientId" value="a7ce9f18-2de5-46ef-8ecf-57cb5b1caac6" />
+    <add key="ida:ClientId" value="11c17e6e-ba59-4785-ae42-5a2d13899df5" />
     <add key="ida:AADInstance" value="https://login.microsoftonline.com/" />
-    <add key="ida:Domain" value="makemeetingsgreat.onmicrosoft.com" />
+    <add key="ida:Domain" value="MakeMeetingsGreat.onmicrosoft.com" />
     <add key="ida:TenantId" value="83726300-8cf8-4ae9-99c1-d69e346b880b" />
-    <add key="ida:PostLogoutRedirectUri" value="https://localhost:44300/" />
+    <add key="ida:PostLogoutRedirectUri" value="https://localhost:44311/" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
