--- a/MyEventURL/Web.config
+++ b/MyEventURL/Web.config
@@ -20,9 +20,9 @@
     <add key="ida:AADInstance" value="https://login.microsoftonline.com/" />
     <add key="ida:Domain" value="MakeMeetingsGreat.onmicrosoft.com" />
     <add key="ida:TenantId" value="83726300-8cf8-4ae9-99c1-d69e346b880b" />
-    <add key="ida:PostLogoutRedirectUri" value="https://localhost:44311/" />
   </appSettings>
   <system.web>
+    <customErrors mode="Off"></customErrors>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <httpModules>
