--- a/MyEventURL/packages.config
+++ b/MyEventURL/packages.config
@@ -46,6 +46,8 @@
   <package id="Microsoft.Spatial" version="7.5.2" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
+  <package id="Moment.js" version="2.22.2" targetFramework="net461" />
+  <package id="Moment.Timezone.js" version="0.5.13" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
