--- a/MyEventURL/packages.config
+++ b/MyEventURL/packages.config
@@ -65,6 +65,7 @@
   <package id="System.Spatial" version="5.8.4" targetFramework="net461" />
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
+  <package id="underscore.js" version="1.8.3" targetFramework="net461" />
   <package id="vue" version="2.5.17" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
