--- a/MyEventURL/MyEventURL.csproj
+++ b/MyEventURL/MyEventURL.csproj
@@ -225,6 +225,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BoardAPIController.cs" />
     <Compile Include="Controllers\BoardsController.cs" />
     <Compile Include="Controllers\DateController.cs" />
     <Compile Include="Controllers\EngagementInfoesController.cs" />
@@ -437,6 +438,12 @@
     <Content Include="Views\Events\Index.cshtml" />
     <Content Include="Views\Events\_EventForm.cshtml" />
     <Content Include="Scripts\underscore.min.map" />
+    <Content Include="Views\Events\_GridComponent.cshtml" />
+    <Content Include="Views\Boards\Create.cshtml" />
+    <Content Include="Views\Boards\Delete.cshtml" />
+    <Content Include="Views\Boards\Details.cshtml" />
+    <Content Include="Views\Boards\Edit.cshtml" />
+    <Content Include="Views\Boards\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
