Updated Index, About, Added Logos, Added Auth

--- a/MyEventURL/MyEventURL.csproj
+++ b/MyEventURL/MyEventURL.csproj
@@ -276,6 +276,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\color_logo_transparent.png" />
     <Content Include="Content\images\ui-icons_444444_256x240.png" />
     <Content Include="Content\images\ui-icons_555555_256x240.png" />
     <Content Include="Content\images\ui-icons_777620_256x240.png" />
@@ -286,6 +287,8 @@
     <Content Include="Content\jquery-ui-timepicker-addon.min.css" />
     <Content Include="Content\jquery-ui.css" />
     <Content Include="Content\jquery-ui.min.css" />
+    <Content Include="Content\love.png" />
+    <Content Include="Content\sharing.png" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
     <Content Include="Content\themes\base\autocomplete.css" />
@@ -327,6 +330,8 @@
     <Content Include="Content\themes\base\tabs.css" />
     <Content Include="Content\themes\base\theme.css" />
     <Content Include="Content\themes\base\tooltip.css" />
+    <Content Include="Content\view.png" />
+    <Content Include="Content\white_logo_transparent.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -435,9 +440,9 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Account\SignOutCallback.cshtml" />
-    <Content Include="Views\Events\Delete.cshtml" />
-    <Content Include="Views\Events\Details.cshtml" />
-    <Content Include="Views\Events\Index.cshtml" />
+    <Content Include="Views\Events\_Delete.cshtml" />
+    <Content Include="Views\Events\_Details.cshtml" />
+    <Content Include="Views\Events\_Index.cshtml" />
     <Content Include="Views\Components\_EventForm.cshtml" />
     <Content Include="Scripts\underscore.min.map" />
     <Content Include="Views\Components\_GridComponent.cshtml" />
@@ -449,6 +454,10 @@
     <Content Include="Views\Components\_AddEvent.cshtml" />
     <Content Include="Views\Components\_IframeModal.cshtml" />
     <Content Include="Views\Components\_EventCard.cshtml" />
+    <Content Include="Views\Events\Delete.cshtml" />
+    <Content Include="Views\Events\Details.cshtml" />
+    <Content Include="Views\Events\Index.cshtml" />
+    <Content Include="Views\Events\_DetailsLogin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
