--- a/MyEventURL/Web.config
+++ b/MyEventURL/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,8 +9,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="MyEventURLContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=MyEventURLContext-20181129144451; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MyEventURLContext-20181129144451.mdf"
-         providerName="System.Data.SqlClient" />
+    <add name="MyEventURLContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=MyEventURLContext-20181129144451; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MyEventURLContext-20181129144451.mdf" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
